--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3819,7 +3819,7 @@
     <string name="autofill_keywords" msgid="7485591824120812710">"автоматически, заполнять, автозаполнение"</string>
     <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Убедитесь, что это приложение безопасно&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; анализирует содержимое экрана и находит поля, которые можно заполнить автоматически."</string>
     <string name="device_theme" msgid="4571803018917608588">"Тема устройства"</string>
-    <string name="default_theme" msgid="7085644992078579076">"По умолчанию"</string>
+    <string name="default_theme" msgid="7085644992078579076">"Pixel"</string>
     <string name="storage_manager_indicator" msgid="1516810749625915020">"Менеджер хранилища: <xliff:g id="STATUS">^1</xliff:g>"</string>
     <string name="storage_manager_indicator_off" msgid="7488057587180724388">"отключен"</string>
     <string name="storage_manager_indicator_on" msgid="8625551710194584733">"включен"</string>
