--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1097,9 +1097,9 @@
     <string name="screensaver_settings_button" msgid="7292214707625717013">"Настройки"</string>
     <string name="automatic_brightness" msgid="5014143533884135461">"Автонастройка"</string>
     <string name="lift_to_wake_title" msgid="4555378006856277635">"Активация в вертикальном положении"</string>
-    <string name="ambient_display_screen_title" msgid="4252755516328775766">"Автоматич. включение экрана"</string>
+    <string name="ambient_display_screen_title" msgid="4252755516328775766">"Активный экран"</string>
     <string name="ambient_display_screen_summary_always_on" msgid="7337555569694794132">"Всегда включено (батарея разряжается быстрее)"</string>
-    <string name="ambient_display_screen_summary_notifications" msgid="1449570742600868654">"При новых уведомлениях"</string>
+    <string name="ambient_display_screen_summary_notifications" msgid="1449570742600868654">"Настройки активного экрана"</string>
     <string name="ambient_display_category_triggers" msgid="4359289754456268573">"Когда включать экран"</string>
     <string name="doze_title" msgid="2375510714460456687">"При новых уведомлениях"</string>
     <string name="doze_summary" msgid="3846219936142814032">"Включать экран, когда приходит уведомление"</string>
